<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <artifactId>bosh</artifactId>
    <packaging>jar</packaging>
    <name>bosh</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>17</release>
        </configuration>
            </plugin>
        </plugins>
    </build>
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <core.version>1.2.0</core.version>
    </properties>

    <parent>
        <artifactId>deployment-parent</artifactId>
        <groupId>de.evoila.cf.broker</groupId>
        <version>1.2.0</version>
    </parent>

  <dependencies>
    <!-- Project dependencies -->
    <dependency>
      <groupId>de.evoila.cf.broker</groupId>
      <artifactId>core</artifactId>
      <version>${core.version}</version>
    </dependency>
    <dependency>
      <groupId>de.evoila.cf.broker</groupId>
      <artifactId>model</artifactId>
      <version>${core.version}</version>
    </dependency>

    <!-- Others -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <scope>provided</scope>
    </dependency>
        <dependency>
            <groupId>de.evoila</groupId>
            <artifactId>bosh-java-client</artifactId>
            <version>1.3.26-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.reactivex.rxjava3</groupId>
            <artifactId>rxjava</artifactId>
            <version>3.1.8</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>st-snapshots</id>
            <name>sonatype-snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
